<resources>
    <string name="app_name">RACE</string>
    <string name="main_menu_msg">Start new game, choose your control mode!</string>
    <string name="toast_msg">You crashed into an obstacle</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="light">Button</string>
    <string name="not_in_the_top">Not in the top</string>
    <string name="top_ten">Top Ten</string>
    <string name="main_menu">Main Menu</string>
    <string name="rating">Rating:</string>
    <string name="score">Score:</string>
    <string name="distance">Distance:</string>
    <string name="gameoverBundle">gameover</string>
    <string name="bundle">bundle</string>
</resources>