<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".Activities.GameOverActivity"
    >

    <ImageView
        android:id="@+id/gameOver_IMG_gameoverTxt"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/game_over"/>

    <TextView
        android:id="@+id/gameOver_LBL_title_Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_IMG_gameoverTxt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/titleColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/distance"/>

    <TextView
        android:id="@+id/gameOver_LBL_Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_LBL_title_Distance"
        android:layout_centerHorizontal="true"
        android:textColor="@color/score_distance_Color"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="0"
        />

    <TextView
        android:id="@+id/gameOver_LBL_title_Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_LBL_Distance"
        android:layout_centerHorizontal="true"
        android:textColor="@color/titleColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/score"/>

    <TextView
        android:id="@+id/gameOver_LBL_Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_LBL_title_Score"
        android:layout_centerHorizontal="true"
        android:textColor="@color/score_distance_Color"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="0"
        />
    <TextView
        android:id="@+id/gameOver_LBL_title_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_LBL_Score"
        android:layout_centerHorizontal="true"
        android:textColor="@color/titleColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/rating"/>

    <TextView
        android:id="@+id/gameOver_LBL_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_LBL_title_Rating"
        android:layout_centerHorizontal="true"
        android:textColor="@color/score_distance_Color"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/not_in_the_top"
        />

    <Button
        android:id="@+id/gameOver_BTN_topTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_LBL_Rating"
        android:padding="12dp"
        android:text="@string/top_ten"
        android:textAllCaps="false" />


    <Button
        android:id="@+id/gameOver_BTN_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gameOver_BTN_topTen"
        android:padding="12dp"
        android:text="@string/main_menu"
        android:textAllCaps="false" />

</RelativeLayout>




